<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_account"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AccountFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:background="#ffff00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_fg_account_"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView_account_total_money"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:text="2000.00"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_fg_account"
            android:layout_width="match_parent"
            android:layout_height="442dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_add_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff00"
            android:text="添加账户"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_fg_account"
...
