...
        android:name="cn.edu.jnu.account.ui.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" >
    </fragment>

    <fragment
        android:id="@+id/navigation_item4"
        android:name="cn.edu.jnu.account.ui.AccountFragment"
        android:label="账户"
        tools:layout="@layout/fragment_account" >
    </fragment>

    <fragment
        android:id="@+id/navigation_item5"
        android:name="cn.edu.jnu.account.ui.MineFragment"
        android:label="我的"
        tools:layout="@layout/fragment_mine" />
</navigation>


